--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 167.172.56.211, port: 14512, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇰🇷 韩国-9.27MB/s(Youtube:不良林), server: v2-4.godlight.xyz, port: 26944, type: vmess, uuid: 07ea283e-bbe8-466f-a268-c5819763a9bf, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /g1641hvx, ws-headers: {Host: v2-4.godlight.xyz}}
-  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 台湾-11.46MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.52MB/s(Youtube:不良林), server: 103.253.26.134, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.134}}
-  - {name: 🇯🇵 日本-4.93MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-558.3KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.98MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: umhn5r.zhs.company, port: 60009, type: vmess, uuid: 67caeeac-e80d-3188-8822-8339eebca085, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: umhn5r.zhs.company}}
+  - {name: 🇨🇳 台湾-10.68MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 波兰-175.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇨🇳 中国-468.8KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-190.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.52MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: uk.node.qchwnd.moe, port: 44613, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: uk.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.80MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: lsj03.wangxd.life, port: 3052, type: trojan, password: ae71ffdc-3206-3b4d-3f4e-e3b63684a556, sni: lsj03.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.93MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-558.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.68MB/s(Youtube:不良林)
+      - 波兰-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
