--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-151.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-10.35MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 波兰-175.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 台湾-9.64MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: umhn5r.zhs.company, port: 60009, type: vmess, uuid: 67caeeac-e80d-3188-8822-8339eebca085, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: umhn5r.zhs.company}}
-  - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.80MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: lsj03.wangxd.life, port: 3052, type: trojan, password: ae71ffdc-3206-3b4d-3f4e-e3b63684a556, sni: lsj03.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.95MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.28MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
+  - {name: 波兰-162.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
   - {name: 🇨🇳 中国-6.75MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 5.183.179.139, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇨🇳 中国-13.44MB/s(Youtube:不良林), server: cm1.jflashfal.xyz, port: 18355, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
+  - {name: 🇨🇳 中国-8.01MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇳 中国-455.8KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-636.9KB/s(Youtube:不良林), server: hkbn.henyo.us, port: 44614, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: hkbn.henyo.us, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.35MB/s(Youtube:不良林)
-      - 波兰-175.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.28MB/s(Youtube:不良林)
+      - 波兰-162.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-636.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
